# aeskulap

./: Makefile.am  configure.ac
glademm/: Makefile.am  init.cc  variablesmap.cc  variablesmap.h  wrap_init.cc  xml.cc
imagepool/: poolfindassociation.cpp
src/: Makefile.am  aboutdialog.h  main.cpp  mainwindow.h  prescandialog.h  settings.h  studymanager.h  windowleveldialog.h
